--- a/engines/model/Gemfile
+++ b/engines/model/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-# Declare your gem's dependencies in core.gemspec.
+# Declare your gem's dependencies in model.gemspec.
 # Bundler will treat runtime dependencies like base dependencies, and
 # development dependencies will be added by default to the :development group.
 gemspec
@@ -12,5 +12,4 @@ gemspec
 
 # To use a debugger
 # gem 'byebug', group: [:development, :test]
-# You need tell where the engine is
-gem 'scheduler_model', path: '../model'
+
